# pydiction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  tickers.yaml
config/common/: config.yaml.example
config/pipeline/: tickers.yaml.example
scripts/: README.md  kelly.py  list-markets-for-series.py
src/pydiction/: auth.py  book.py  client.py  db.py  features.py  main.py  state.py  utils.py  websocket.py
