[project]
name = "pydiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["common", "kalshi"]

[tool.uv.sources]
common = { workspace = true }
kalshi = { workspace = true }

[tool.uv.workspace]
members = ["packages/kalshi", "packages/common", "packages/streams"]
exclude = ["packages/maker", "packages/pipeline"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
]
