[project]
name = "pydiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["common", "kalshi", "streams"]

[tool.uv.sources]
common = { workspace = true }
kalshi = { workspace = true }
streams = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/maker", "packages/pipeline"]

[dependency-groups]
dev = [
    "fire>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
]
